# excel-chatbot

./: README.md  income.xlsxtemp.csv  pyproject.toml
app/: custom_agent.py  server.py
frontend/: index.html  script.js
uploaded_files/: income.xlsx
